// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Action/> should render with a Body component 1`] = `
<div
  class="http"
>
  <div
    class="formParamRow"
  >
    <div>
      <div
        class="InputField required form-group"
        color=""
      >
        <label
          class="control-label"
          for="id-method"
        >
          Method
        </label>
        <div
          class=""
        >
          <select
            class="field form-control"
            id="id-method"
            required=""
          >
            <option
              value="GET"
            >
              GET
            </option>
            <option
              value="POST"
            >
              POST
            </option>
            <option
              value="PUT"
            >
              PUT
            </option>
            <option
              value="DELETE"
            >
              DELETE
            </option>
          </select>
        </div>
      </div>
    </div>
    <div
      class="formParamLargeCol"
    >
      <div
        class="InputField required form-group"
        color=""
      >
        <label
          class="control-label"
          for="id-url"
        >
          URL
        </label>
        <div
          class=""
        >
          <input
            class="field form-control"
            id="id-url"
            pattern="*"
            required=""
            type="text"
            value="www.someurl.com"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="mt-3 form-group"
  >
    <label
      class="control-label"
    >
      Headers
    </label>
    <div>
      <button
        class="btn btn-secondary btn-sm"
        type="button"
      >
        <i
          class="material-icons formParamIcon"
        >
          add
        </i>
      </button>
    </div>
  </div>
  <div
    class="mt-3 form-group"
  >
    <label
      class="control-label"
    >
      Query Parameters
    </label>
    <div>
      <button
        class="btn btn-secondary btn-sm"
        type="button"
      >
        <i
          class="material-icons formParamIcon"
        >
          add
        </i>
      </button>
    </div>
  </div>
  <div
    class="form-group"
  >
    <label
      class="control-label"
    >
      Body
    </label>
    <div
      class="mb-3"
    >
      <fieldset
        name="radio-field-1"
      >
        <div
          class="option"
        >
          <label
            class="label label"
            for="application/json"
          >
            <input
              checked=""
              class="input"
              id="application/json"
              name="radio-field-1"
              type="radio"
            />
            application/json
          </label>
        </div>
        <div
          class="option"
        >
          <label
            class="label label"
            for="application/x-www-form-urlencoded"
          >
            <input
              class="input"
              id="application/x-www-form-urlencoded"
              name="radio-field-1"
              type="radio"
            />
            application/x-www-form-urlencoded
          </label>
        </div>
      </fieldset>
    </div>
    <div
      class="InputField form-group"
      color=""
    >
      <div
        class=""
      >
        <div
          class="form-group"
        >
          <div
            class="controls"
          >
            <textarea
              class="form-control"
              id="id-json"
              rows="6"
            >
              {}
            </textarea>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Action/> should render without a Body component 1`] = `
<div
  class="http"
>
  <div
    class="formParamRow"
  >
    <div>
      <div
        class="InputField required form-group"
        color=""
      >
        <label
          class="control-label"
          for="id-method"
        >
          Method
        </label>
        <div
          class=""
        >
          <select
            class="field form-control"
            id="id-method"
            required=""
          >
            <option
              value="GET"
            >
              GET
            </option>
            <option
              value="POST"
            >
              POST
            </option>
            <option
              value="PUT"
            >
              PUT
            </option>
            <option
              value="DELETE"
            >
              DELETE
            </option>
          </select>
        </div>
      </div>
    </div>
    <div
      class="formParamLargeCol"
    >
      <div
        class="InputField required form-group"
        color=""
      >
        <label
          class="control-label"
          for="id-url"
        >
          URL
        </label>
        <div
          class=""
        >
          <input
            class="field form-control"
            id="id-url"
            pattern="*"
            required=""
            type="text"
            value="www.someurl.com"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="mt-3 form-group"
  >
    <label
      class="control-label"
    >
      Headers
    </label>
    <div>
      <button
        class="btn btn-secondary btn-sm"
        type="button"
      >
        <i
          class="material-icons formParamIcon"
        >
          add
        </i>
      </button>
    </div>
  </div>
  <div
    class="mt-3 form-group"
  >
    <label
      class="control-label"
    >
      Query Parameters
    </label>
    <div>
      <button
        class="btn btn-secondary btn-sm"
        type="button"
      >
        <i
          class="material-icons formParamIcon"
        >
          add
        </i>
      </button>
    </div>
  </div>
</div>
`;
